# openproject-mcp-server

./: CI_CD.md  README.md  RELEASING.md  TROUBLESHOOTING.md  openproject_mcp.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  security.yml
tests/: test_client.py
